# Rust-Game-Save-Finder

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_data.rs  main.rs  search.rs  utils.rs
src-tauri/src/tests/: test_app_data.rs  test_local_save_searches.rs  test_search.rs  test_utils.rs
src/components/: SaveDirList.tsx  SavePathList.tsx
