[package]
name = "game-save-finder"
version = "0.0.0"
description = "Searches for possible game save paths"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-close", "window-start-dragging", "window-unminimize", "window-hide", "window-minimize", "window-show", "clipboard-write-text", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5.0"
aho-corasick = "1.1.3"
regex = "1.10.4"
reqwest = {version = "0.12.4", features = ["json", "blocking"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
